# vim-fmi-cli

./: Cargo.toml
.github/workflows/: release.yml
src/: controller.rs  lib.rs  main.rs  vim.rs  vimrc
