[package]
name = "vim-fmi-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive", "cargo"] }
once_cell = "1.17.1"
reqwest = { version = "0.11.14", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tempfile = "3.4.0"
url = "2.3.1"
