[package]
name = "vim-fmi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
clap = { version = "4.1.6", features = ["derive", "cargo"] }
mac_address = "1.1.4"
once_cell = "1.17.1"
reqwest = { version = "0.11.14", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_urlencoded = "0.7.1"
similar = "2.2.1"
tempfile = "3.4.0"
url = "2.3.1"
whoami = { version = "1.3.0", default-features = false }
