[package]
name = "vim-fmi"
version = "0.1.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
clap = { version = "4.1.6", features = ["derive", "cargo"] }
directories = "4.0.1"
once_cell = "1.17.1"
reqwest = { version = "0.11.14", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_urlencoded = "0.7.1"
similar = "2.2.1"
tempfile = "3.4.0"
url = "2.3.1"
which = "4.4.0"
whoami = { version = "1.3.0", default-features = false }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.4"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
